Fix `JavaExec` tasks not receiving JVM args from classpath JARs added after configuration (#3212)
Fix JavaExec tasks not receiving JVM args from classpath JARs

JavaExec tasks were not picking up `--add-exports`/`--add-opens` from JAR manifests when dependencies were added after configuration time. This applies the same fix used for Test tasks: using a Callable to defer `classpath` resolution until execution time.